server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fourcolour
  labels:
    name: fourcolour
