server/k8s/api-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  namespace: fourcolour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: aqtran/spring-api-gateway-service:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: fourcolour
spec:
  type: NodePort
  selector:
    app: api-gateway-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30808
