server/k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: fourcolour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: aqtran/spring-authentication-service:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: fourcolour
spec:
  selector:
    app: authentication-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
