server/k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: fourcolour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.4.0
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zookeeper-storage
              mountPath: /var/lib/zookeeper/data
            - name: zookeeper-logs
              mountPath: /var/lib/zookeeper/log
      volumes:
        - name: zookeeper-storage
          persistentVolumeClaim:
            claimName: zookeeper-pvc
        - name: zookeeper-logs
          persistentVolumeClaim:
            claimName: zookeeper-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: fourcolour
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: fourcolour
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: kafka
          image: bitnami/kafka:3.5.1
          ports:
            - containerPort: 29092
          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
          livenessProbe:
            tcpSocket:
              port: 29092
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 29092
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: fourcolour
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 29092
      targetPort: 29092
  type: ClusterIP
