server/k8s/logger-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
  namespace: fourcolour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
        - name: logger-service
          image: aqtran/spring-logger-service:latest
          ports:
            - containerPort: 8084
            - containerPort: 50001
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  namespace: fourcolour
spec:
  selector:
    app: logger-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 50001
      targetPort: 50001
  type: ClusterIP
