server/k8s/map-storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-storage-service
  namespace: fourcolour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-storage-service
  template:
    metadata:
      labels:
        app: map-storage-service
    spec:
      containers:
        - name: map-storage-service
          image: aqtran/spring-map-storage-service:latest
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: map-storage-service
  namespace: fourcolour
spec:
  selector:
    app: map-storage-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
